nRF5_SDK_15.3.0_59ac345/15.2/nRF5x/examples/dfu/experimental/ant_bootloader/pca10040/dual_bank_ant_s212/armgcc/log.txt
Makefile:186: Cannot find include folder: ../../../../../../../components/softdevice/s212/headers/nrf52
mkdir _build
cd _build && mkdir nrf52832_xxaa_s212
Assembling file: gcc_startup_nrf52.S
'E:/SYSBUILD/systools/sysgcc/arm-eabi/bin/arm-eabi-gcc' -x assembler-with-cpp -MP -MD -c -o _build/nrf52832_xxaa_s212/gcc_startup_nrf52.S.o ../../../../../../../modules/nrfx/mdk/gcc_startup_nrf52.S -g3 -mcpu=cortex-m4 -mthumb -mabi=aapcs -mfloat-abi=hard -mfpu=fpv4-sp-d16 -DANT_STACK_SUPPORT_REQD -DBOARD_PCA10040 -DCONFIG_GPIO_AS_PINRESET -DFLOAT_ABI_HARD -DNRF52 -DNRF52832_XXAA -DNRF52_PAN_74 -DS212 -DSOFTDEVICE_PRESENT -DSWI_DISABLE0 -D__HEAP_SIZE=0 -D__STACK_SIZE=8192 -I../../../config -I../../.. -I../../../include -I../../../include/boot_common -I../../../../../../../external/fprintf -I../../../../../../../components/libraries/experimental_section_vars -I../../../../../../../components/ant/ant_key_manager -I../../../../../../../components/libraries/atomic -I../../../../../../../components/libraries/delay -I../../../../../../../components/softdevice/common -I../config -I../../../../../../../components/libraries/balloc -I../../../../../../../components/libraries/log -I../../../../../../../components/libraries/memobj -I../../../../../../../components -I../../../../../../../modules/nrfx/mdk -I../../../../../../../components/libraries/scheduler -I../../../../../../../components/ant/ant_fs -I../../../../../../../integration/nrfx -I../../../../../../../modules/nrfx/drivers/include -I../../../../../../../components/softdevice/s212/headers/nrf52 -I../../../../../../../components/softdevice/s212/headers -I../../../../../../../components/libraries/ringbuf -I../../../../../../../modules/nrfx -I../../../../../../../components/libraries/log/src -I../../../../../../../components/libraries/strerror -I../../../../../../../external/segger_rtt -I../../../../../../../modules/nrfx/hal -I../../../../../../../components/ant/ant_key_manager/config -I../../../../../../../components/libraries/bsp -I../../../../../../../components/boards -I../../../../../../../components/libraries/timer -I../../../../../../../components/libraries/button -I../../../../../../../integration/nrfx/legacy -I../../../../../../../components/libraries/util -I../../../../../../../components/toolchain/cmsis/include
Compiling file: nrf_log_backend_rtt.c
'E:/SYSBUILD/systools/sysgcc/arm-eabi/bin/arm-eabi-gcc' -std=c99 -MP -MD -c -o _build/nrf52832_xxaa_s212/nrf_log_backend_rtt.c.o ../../../../../../../components/libraries/log/src/nrf_log_backend_rtt.c -Os -g3 -DANT_STACK_SUPPORT_REQD -DBOARD_PCA10040 -DCONFIG_GPIO_AS_PINRESET -DFLOAT_ABI_HARD -DNRF52 -DNRF52832_XXAA -DNRF52_PAN_74 -DS212 -DSOFTDEVICE_PRESENT -DSWI_DISABLE0 -mcpu=cortex-m4 -mthumb -mabi=aapcs -Wall -Werror -mfloat-abi=hard -mfpu=fpv4-sp-d16 -ffunction-sections -fdata-sections -fno-strict-aliasing -fno-builtin -fshort-enums -flto -D__HEAP_SIZE=0 -D__STACK_SIZE=8192 -I../../../config -I../../.. -I../../../include -I../../../include/boot_common -I../../../../../../../external/fprintf -I../../../../../../../components/libraries/experimental_section_vars -I../../../../../../../components/ant/ant_key_manager -I../../../../../../../components/libraries/atomic -I../../../../../../../components/libraries/delay -I../../../../../../../components/softdevice/common -I../config -I../../../../../../../components/libraries/balloc -I../../../../../../../components/libraries/log -I../../../../../../../components/libraries/memobj -I../../../../../../../components -I../../../../../../../modules/nrfx/mdk -I../../../../../../../components/libraries/scheduler -I../../../../../../../components/ant/ant_fs -I../../../../../../../integration/nrfx -I../../../../../../../modules/nrfx/drivers/include -I../../../../../../../components/softdevice/s212/headers/nrf52 -I../../../../../../../components/softdevice/s212/headers -I../../../../../../../components/libraries/ringbuf -I../../../../../../../modules/nrfx -I../../../../../../../components/libraries/log/src -I../../../../../../../components/libraries/strerror -I../../../../../../../external/segger_rtt -I../../../../../../../modules/nrfx/hal -I../../../../../../../components/ant/ant_key_manager/config -I../../../../../../../components/libraries/bsp -I../../../../../../../components/boards -I../../../../../../../components/libraries/timer -I../../../../../../../components/libraries/button -I../../../../../../../integration/nrfx/legacy -I../../../../../../../components/libraries/util -I../../../../../../../components/toolchain/cmsis/include
Compiling file: nrf_log_backend_serial.c
'E:/SYSBUILD/systools/sysgcc/arm-eabi/bin/arm-eabi-gcc' -std=c99 -MP -MD -c -o _build/nrf52832_xxaa_s212/nrf_log_backend_serial.c.o ../../../../../../../components/libraries/log/src/nrf_log_backend_serial.c -Os -g3 -DANT_STACK_SUPPORT_REQD -DBOARD_PCA10040 -DCONFIG_GPIO_AS_PINRESET -DFLOAT_ABI_HARD -DNRF52 -DNRF52832_XXAA -DNRF52_PAN_74 -DS212 -DSOFTDEVICE_PRESENT -DSWI_DISABLE0 -mcpu=cortex-m4 -mthumb -mabi=aapcs -Wall -Werror -mfloat-abi=hard -mfpu=fpv4-sp-d16 -ffunction-sections -fdata-sections -fno-strict-aliasing -fno-builtin -fshort-enums -flto -D__HEAP_SIZE=0 -D__STACK_SIZE=8192 -I../../../config -I../../.. -I../../../include -I../../../include/boot_common -I../../../../../../../external/fprintf -I../../../../../../../components/libraries/experimental_section_vars -I../../../../../../../components/ant/ant_key_manager -I../../../../../../../components/libraries/atomic -I../../../../../../../components/libraries/delay -I../../../../../../../components/softdevice/common -I../config -I../../../../../../../components/libraries/balloc -I../../../../../../../components/libraries/log -I../../../../../../../components/libraries/memobj -I../../../../../../../components -I../../../../../../../modules/nrfx/mdk -I../../../../../../../components/libraries/scheduler -I../../../../../../../components/ant/ant_fs -I../../../../../../../integration/nrfx -I../../../../../../../modules/nrfx/drivers/include -I../../../../../../../components/softdevice/s212/headers/nrf52 -I../../../../../../../components/softdevice/s212/headers -I../../../../../../../components/libraries/ringbuf -I../../../../../../../modules/nrfx -I../../../../../../../components/libraries/log/src -I../../../../../../../components/libraries/strerror -I../../../../../../../external/segger_rtt -I../../../../../../../modules/nrfx/hal -I../../../../../../../components/ant/ant_key_manager/config -I../../../../../../../components/libraries/bsp -I../../../../../../../components/boards -I../../../../../../../components/libraries/timer -I../../../../../../../components/libraries/button -I../../../../../../../integration/nrfx/legacy -I../../../../../../../components/libraries/util -I../../../../../../../components/toolchain/cmsis/include
Compiling file: nrf_log_backend_uart.c
'E:/SYSBUILD/systools/sysgcc/arm-eabi/bin/arm-eabi-gcc' -std=c99 -MP -MD -c -o _build/nrf52832_xxaa_s212/nrf_log_backend_uart.c.o ../../../../../../../components/libraries/log/src/nrf_log_backend_uart.c -Os -g3 -DANT_STACK_SUPPORT_REQD -DBOARD_PCA10040 -DCONFIG_GPIO_AS_PINRESET -DFLOAT_ABI_HARD -DNRF52 -DNRF52832_XXAA -DNRF52_PAN_74 -DS212 -DSOFTDEVICE_PRESENT -DSWI_DISABLE0 -mcpu=cortex-m4 -mthumb -mabi=aapcs -Wall -Werror -mfloat-abi=hard -mfpu=fpv4-sp-d16 -ffunction-sections -fdata-sections -fno-strict-aliasing -fno-builtin -fshort-enums -flto -D__HEAP_SIZE=0 -D__STACK_SIZE=8192 -I../../../config -I../../.. -I../../../include -I../../../include/boot_common -I../../../../../../../external/fprintf -I../../../../../../../components/libraries/experimental_section_vars -I../../../../../../../components/ant/ant_key_manager -I../../../../../../../components/libraries/atomic -I../../../../../../../components/libraries/delay -I../../../../../../../components/softdevice/common -I../config -I../../../../../../../components/libraries/balloc -I../../../../../../../components/libraries/log -I../../../../../../../components/libraries/memobj -I../../../../../../../components -I../../../../../../../modules/nrfx/mdk -I../../../../../../../components/libraries/scheduler -I../../../../../../../components/ant/ant_fs -I../../../../../../../integration/nrfx -I../../../../../../../modules/nrfx/drivers/include -I../../../../../../../components/softdevice/s212/headers/nrf52 -I../../../../../../../components/softdevice/s212/headers -I../../../../../../../components/libraries/ringbuf -I../../../../../../../modules/nrfx -I../../../../../../../components/libraries/log/src -I../../../../../../../components/libraries/strerror -I../../../../../../../external/segger_rtt -I../../../../../../../modules/nrfx/hal -I../../../../../../../components/ant/ant_key_manager/config -I../../../../../../../components/libraries/bsp -I../../../../../../../components/boards -I../../../../../../../components/libraries/timer -I../../../../../../../components/libraries/button -I../../../../../../../integration/nrfx/legacy -I../../../../../../../components/libraries/util -I../../../../../../../components/toolchain/cmsis/include
Compiling file: nrf_log_default_backends.c
'E:/SYSBUILD/systools/sysgcc/arm-eabi/bin/arm-eabi-gcc' -std=c99 -MP -MD -c -o _build/nrf52832_xxaa_s212/nrf_log_default_backends.c.o ../../../../../../../components/libraries/log/src/nrf_log_default_backends.c -Os -g3 -DANT_STACK_SUPPORT_REQD -DBOARD_PCA10040 -DCONFIG_GPIO_AS_PINRESET -DFLOAT_ABI_HARD -DNRF52 -DNRF52832_XXAA -DNRF52_PAN_74 -DS212 -DSOFTDEVICE_PRESENT -DSWI_DISABLE0 -mcpu=cortex-m4 -mthumb -mabi=aapcs -Wall -Werror -mfloat-abi=hard -mfpu=fpv4-sp-d16 -ffunction-sections -fdata-sections -fno-strict-aliasing -fno-builtin -fshort-enums -flto -D__HEAP_SIZE=0 -D__STACK_SIZE=8192 -I../../../config -I../../.. -I../../../include -I../../../include/boot_common -I../../../../../../../external/fprintf -I../../../../../../../components/libraries/experimental_section_vars -I../../../../../../../components/ant/ant_key_manager -I../../../../../../../components/libraries/atomic -I../../../../../../../components/libraries/delay -I../../../../../../../components/softdevice/common -I../config -I../../../../../../../components/libraries/balloc -I../../../../../../../components/libraries/log -I../../../../../../../components/libraries/memobj -I../../../../../../../components -I../../../../../../../modules/nrfx/mdk -I../../../../../../../components/libraries/scheduler -I../../../../../../../components/ant/ant_fs -I../../../../../../../integration/nrfx -I../../../../../../../modules/nrfx/drivers/include -I../../../../../../../components/softdevice/s212/headers/nrf52 -I../../../../../../../components/softdevice/s212/headers -I../../../../../../../components/libraries/ringbuf -I../../../../../../../modules/nrfx -I../../../../../../../components/libraries/log/src -I../../../../../../../components/libraries/strerror -I../../../../../../../external/segger_rtt -I../../../../../../../modules/nrfx/hal -I../../../../../../../components/ant/ant_key_manager/config -I../../../../../../../components/libraries/bsp -I../../../../../../../components/boards -I../../../../../../../components/libraries/timer -I../../../../../../../components/libraries/button -I../../../../../../../integration/nrfx/legacy -I../../../../../../../components/libraries/util -I../../../../../../../components/toolchain/cmsis/include
Compiling file: nrf_log_frontend.c
'E:/SYSBUILD/systools/sysgcc/arm-eabi/bin/arm-eabi-gcc' -std=c99 -MP -MD -c -o _build/nrf52832_xxaa_s212/nrf_log_frontend.c.o ../../../../../../../components/libraries/log/src/nrf_log_frontend.c -Os -g3 -DANT_STACK_SUPPORT_REQD -DBOARD_PCA10040 -DCONFIG_GPIO_AS_PINRESET -DFLOAT_ABI_HARD -DNRF52 -DNRF52832_XXAA -DNRF52_PAN_74 -DS212 -DSOFTDEVICE_PRESENT -DSWI_DISABLE0 -mcpu=cortex-m4 -mthumb -mabi=aapcs -Wall -Werror -mfloat-abi=hard -mfpu=fpv4-sp-d16 -ffunction-sections -fdata-sections -fno-strict-aliasing -fno-builtin -fshort-enums -flto -D__HEAP_SIZE=0 -D__STACK_SIZE=8192 -I../../../config -I../../.. -I../../../include -I../../../include/boot_common -I../../../../../../../external/fprintf -I../../../../../../../components/libraries/experimental_section_vars -I../../../../../../../components/ant/ant_key_manager -I../../../../../../../components/libraries/atomic -I../../../../../../../components/libraries/delay -I../../../../../../../components/softdevice/common -I../config -I../../../../../../../components/libraries/balloc -I../../../../../../../components/libraries/log -I../../../../../../../components/libraries/memobj -I../../../../../../../components -I../../../../../../../modules/nrfx/mdk -I../../../../../../../components/libraries/scheduler -I../../../../../../../components/ant/ant_fs -I../../../../../../../integration/nrfx -I../../../../../../../modules/nrfx/drivers/include -I../../../../../../../components/softdevice/s212/headers/nrf52 -I../../../../../../../components/softdevice/s212/headers -I../../../../../../../components/libraries/ringbuf -I../../../../../../../modules/nrfx -I../../../../../../../components/libraries/log/src -I../../../../../../../components/libraries/strerror -I../../../../../../../external/segger_rtt -I../../../../../../../modules/nrfx/hal -I../../../../../../../components/ant/ant_key_manager/config -I../../../../../../../components/libraries/bsp -I../../../../../../../components/boards -I../../../../../../../components/libraries/timer -I../../../../../../../components/libraries/button -I../../../../../../../integration/nrfx/legacy -I../../../../../../../components/libraries/util -I../../../../../../../components/toolchain/cmsis/include
Compiling file: nrf_log_str_formatter.c
'E:/SYSBUILD/systools/sysgcc/arm-eabi/bin/arm-eabi-gcc' -std=c99 -MP -MD -c -o _build/nrf52832_xxaa_s212/nrf_log_str_formatter.c.o ../../../../../../../components/libraries/log/src/nrf_log_str_formatter.c -Os -g3 -DANT_STACK_SUPPORT_REQD -DBOARD_PCA10040 -DCONFIG_GPIO_AS_PINRESET -DFLOAT_ABI_HARD -DNRF52 -DNRF52832_XXAA -DNRF52_PAN_74 -DS212 -DSOFTDEVICE_PRESENT -DSWI_DISABLE0 -mcpu=cortex-m4 -mthumb -mabi=aapcs -Wall -Werror -mfloat-abi=hard -mfpu=fpv4-sp-d16 -ffunction-sections -fdata-sections -fno-strict-aliasing -fno-builtin -fshort-enums -flto -D__HEAP_SIZE=0 -D__STACK_SIZE=8192 -I../../../config -I../../.. -I../../../include -I../../../include/boot_common -I../../../../../../../external/fprintf -I../../../../../../../components/libraries/experimental_section_vars -I../../../../../../../components/ant/ant_key_manager -I../../../../../../../components/libraries/atomic -I../../../../../../../components/libraries/delay -I../../../../../../../components/softdevice/common -I../config -I../../../../../../../components/libraries/balloc -I../../../../../../../components/libraries/log -I../../../../../../../components/libraries/memobj -I../../../../../../../components -I../../../../../../../modules/nrfx/mdk -I../../../../../../../components/libraries/scheduler -I../../../../../../../components/ant/ant_fs -I../../../../../../../integration/nrfx -I../../../../../../../modules/nrfx/drivers/include -I../../../../../../../components/softdevice/s212/headers/nrf52 -I../../../../../../../components/softdevice/s212/headers -I../../../../../../../components/libraries/ringbuf -I../../../../../../../modules/nrfx -I../../../../../../../components/libraries/log/src -I../../../../../../../components/libraries/strerror -I../../../../../../../external/segger_rtt -I../../../../../../../modules/nrfx/hal -I../../../../../../../components/ant/ant_key_manager/config -I../../../../../../../components/libraries/bsp -I../../../../../../../components/boards -I../../../../../../../components/libraries/timer -I../../../../../../../components/libraries/button -I../../../../../../../integration/nrfx/legacy -I../../../../../../../components/libraries/util -I../../../../../../../components/toolchain/cmsis/include
Compiling file: boards.c
'E:/SYSBUILD/systools/sysgcc/arm-eabi/bin/arm-eabi-gcc' -std=c99 -MP -MD -c -o _build/nrf52832_xxaa_s212/boards.c.o ../../../../../../../components/boards/boards.c -Os -g3 -DANT_STACK_SUPPORT_REQD -DBOARD_PCA10040 -DCONFIG_GPIO_AS_PINRESET -DFLOAT_ABI_HARD -DNRF52 -DNRF52832_XXAA -DNRF52_PAN_74 -DS212 -DSOFTDEVICE_PRESENT -DSWI_DISABLE0 -mcpu=cortex-m4 -mthumb -mabi=aapcs -Wall -Werror -mfloat-abi=hard -mfpu=fpv4-sp-d16 -ffunction-sections -fdata-sections -fno-strict-aliasing -fno-builtin -fshort-enums -flto -D__HEAP_SIZE=0 -D__STACK_SIZE=8192 -I../../../config -I../../.. -I../../../include -I../../../include/boot_common -I../../../../../../../external/fprintf -I../../../../../../../components/libraries/experimental_section_vars -I../../../../../../../components/ant/ant_key_manager -I../../../../../../../components/libraries/atomic -I../../../../../../../components/libraries/delay -I../../../../../../../components/softdevice/common -I../config -I../../../../../../../components/libraries/balloc -I../../../../../../../components/libraries/log -I../../../../../../../components/libraries/memobj -I../../../../../../../components -I../../../../../../../modules/nrfx/mdk -I../../../../../../../components/libraries/scheduler -I../../../../../../../components/ant/ant_fs -I../../../../../../../integration/nrfx -I../../../../../../../modules/nrfx/drivers/include -I../../../../../../../components/softdevice/s212/headers/nrf52 -I../../../../../../../components/softdevice/s212/headers -I../../../../../../../components/libraries/ringbuf -I../../../../../../../modules/nrfx -I../../../../../../../components/libraries/log/src -I../../../../../../../components/libraries/strerror -I../../../../../../../external/segger_rtt -I../../../../../../../modules/nrfx/hal -I../../../../../../../components/ant/ant_key_manager/config -I../../../../../../../components/libraries/bsp -I../../../../../../../components/boards -I../../../../../../../components/libraries/timer -I../../../../../../../components/libraries/button -I../../../../../../../integration/nrfx/legacy -I../../../../../../../components/libraries/util -I../../../../../../../components/toolchain/cmsis/include
Compiling file: app_button.c
'E:/SYSBUILD/systools/sysgcc/arm-eabi/bin/arm-eabi-gcc' -std=c99 -MP -MD -c -o _build/nrf52832_xxaa_s212/app_button.c.o ../../../../../../../components/libraries/button/app_button.c -Os -g3 -DANT_STACK_SUPPORT_REQD -DBOARD_PCA10040 -DCONFIG_GPIO_AS_PINRESET -DFLOAT_ABI_HARD -DNRF52 -DNRF52832_XXAA -DNRF52_PAN_74 -DS212 -DSOFTDEVICE_PRESENT -DSWI_DISABLE0 -mcpu=cortex-m4 -mthumb -mabi=aapcs -Wall -Werror -mfloat-abi=hard -mfpu=fpv4-sp-d16 -ffunction-sections -fdata-sections -fno-strict-aliasing -fno-builtin -fshort-enums -flto -D__HEAP_SIZE=0 -D__STACK_SIZE=8192 -I../../../config -I../../.. -I../../../include -I../../../include/boot_common -I../../../../../../../external/fprintf -I../../../../../../../components/libraries/experimental_section_vars -I../../../../../../../components/ant/ant_key_manager -I../../../../../../../components/libraries/atomic -I../../../../../../../components/libraries/delay -I../../../../../../../components/softdevice/common -I../config -I../../../../../../../components/libraries/balloc -I../../../../../../../components/libraries/log -I../../../../../../../components/libraries/memobj -I../../../../../../../components -I../../../../../../../modules/nrfx/mdk -I../../../../../../../components/libraries/scheduler -I../../../../../../../components/ant/ant_fs -I../../../../../../../integration/nrfx -I../../../../../../../modules/nrfx/drivers/include -I../../../../../../../components/softdevice/s212/headers/nrf52 -I../../../../../../../components/softdevice/s212/headers -I../../../../../../../components/libraries/ringbuf -I../../../../../../../modules/nrfx -I../../../../../../../components/libraries/log/src -I../../../../../../../components/libraries/strerror -I../../../../../../../external/segger_rtt -I../../../../../../../modules/nrfx/hal -I../../../../../../../components/ant/ant_key_manager/config -I../../../../../../../components/libraries/bsp -I../../../../../../../components/boards -I../../../../../../../components/libraries/timer -I../../../../../../../components/libraries/button -I../../../../../../../integration/nrfx/legacy -I../../../../../../../components/libraries/util -I../../../../../../../components/toolchain/cmsis/include
Compiling file: app_error.c
'E:/SYSBUILD/systools/sysgcc/arm-eabi/bin/arm-eabi-gcc' -std=c99 -MP -MD -c -o _build/nrf52832_xxaa_s212/app_error.c.o ../../../../../../../components/libraries/util/app_error.c -Os -g3 -DANT_STACK_SUPPORT_REQD -DBOARD_PCA10040 -DCONFIG_GPIO_AS_PINRESET -DFLOAT_ABI_HARD -DNRF52 -DNRF52832_XXAA -DNRF52_PAN_74 -DS212 -DSOFTDEVICE_PRESENT -DSWI_DISABLE0 -mcpu=cortex-m4 -mthumb -mabi=aapcs -Wall -Werror -mfloat-abi=hard -mfpu=fpv4-sp-d16 -ffunction-sections -fdata-sections -fno-strict-aliasing -fno-builtin -fshort-enums -flto -D__HEAP_SIZE=0 -D__STACK_SIZE=8192 -I../../../config -I../../.. -I../../../include -I../../../include/boot_common -I../../../../../../../external/fprintf -I../../../../../../../components/libraries/experimental_section_vars -I../../../../../../../components/ant/ant_key_manager -I../../../../../../../components/libraries/atomic -I../../../../../../../components/libraries/delay -I../../../../../../../components/softdevice/common -I../config -I../../../../../../../components/libraries/balloc -I../../../../../../../components/libraries/log -I../../../../../../../components/libraries/memobj -I../../../../../../../components -I../../../../../../../modules/nrfx/mdk -I../../../../../../../components/libraries/scheduler -I../../../../../../../components/ant/ant_fs -I../../../../../../../integration/nrfx -I../../../../../../../modules/nrfx/drivers/include -I../../../../../../../components/softdevice/s212/headers/nrf52 -I../../../../../../../components/softdevice/s212/headers -I../../../../../../../components/libraries/ringbuf -I../../../../../../../modules/nrfx -I../../../../../../../components/libraries/log/src -I../../../../../../../components/libraries/strerror -I../../../../../../../external/segger_rtt -I../../../../../../../modules/nrfx/hal -I../../../../../../../components/ant/ant_key_manager/config -I../../../../../../../components/libraries/bsp -I../../../../../../../components/boards -I../../../../../../../components/libraries/timer -I../../../../../../../components/libraries/button -I../../../../../../../integration/nrfx/legacy -I../../../../../../../components/libraries/util -I../../../../../../../components/toolchain/cmsis/include
Compiling file: app_error_handler_gcc.c
'E:/SYSBUILD/systools/sysgcc/arm-eabi/bin/arm-eabi-gcc' -std=c99 -MP -MD -c -o _build/nrf52832_xxaa_s212/app_error_handler_gcc.c.o ../../../../../../../components/libraries/util/app_error_handler_gcc.c -Os -g3 -DANT_STACK_SUPPORT_REQD -DBOARD_PCA10040 -DCONFIG_GPIO_AS_PINRESET -DFLOAT_ABI_HARD -DNRF52 -DNRF52832_XXAA -DNRF52_PAN_74 -DS212 -DSOFTDEVICE_PRESENT -DSWI_DISABLE0 -mcpu=cortex-m4 -mthumb -mabi=aapcs -Wall -Werror -mfloat-abi=hard -mfpu=fpv4-sp-d16 -ffunction-sections -fdata-sections -fno-strict-aliasing -fno-builtin -fshort-enums -flto -D__HEAP_SIZE=0 -D__STACK_SIZE=8192 -I../../../config -I../../.. -I../../../include -I../../../include/boot_common -I../../../../../../../external/fprintf -I../../../../../../../components/libraries/experimental_section_vars -I../../../../../../../components/ant/ant_key_manager -I../../../../../../../components/libraries/atomic -I../../../../../../../components/libraries/delay -I../../../../../../../components/softdevice/common -I../config -I../../../../../../../components/libraries/balloc -I../../../../../../../components/libraries/log -I../../../../../../../components/libraries/memobj -I../../../../../../../components -I../../../../../../../modules/nrfx/mdk -I../../../../../../../components/libraries/scheduler -I../../../../../../../components/ant/ant_fs -I../../../../../../../integration/nrfx -I../../../../../../../modules/nrfx/drivers/include -I../../../../../../../components/softdevice/s212/headers/nrf52 -I../../../../../../../components/softdevice/s212/headers -I../../../../../../../components/libraries/ringbuf -I../../../../../../../modules/nrfx -I../../../../../../../components/libraries/log/src -I../../../../../../../components/libraries/strerror -I../../../../../../../external/segger_rtt -I../../../../../../../modules/nrfx/hal -I../../../../../../../components/ant/ant_key_manager/config -I../../../../../../../components/libraries/bsp -I../../../../../../../components/boards -I../../../../../../../components/libraries/timer -I../../../../../../../components/libraries/button -I../../../../../../../integration/nrfx/legacy -I../../../../../../../components/libraries/util -I../../../../../../../components/toolchain/cmsis/include
Compiling file: app_error_weak.c
'E:/SYSBUILD/systools/sysgcc/arm-eabi/bin/arm-eabi-gcc' -std=c99 -MP -MD -c -o _build/nrf52832_xxaa_s212/app_error_weak.c.o ../../../../../../../components/libraries/util/app_error_weak.c -Os -g3 -DANT_STACK_SUPPORT_REQD -DBOARD_PCA10040 -DCONFIG_GPIO_AS_PINRESET -DFLOAT_ABI_HARD -DNRF52 -DNRF52832_XXAA -DNRF52_PAN_74 -DS212 -DSOFTDEVICE_PRESENT -DSWI_DISABLE0 -mcpu=cortex-m4 -mthumb -mabi=aapcs -Wall -Werror -mfloat-abi=hard -mfpu=fpv4-sp-d16 -ffunction-sections -fdata-sections -fno-strict-aliasing -fno-builtin -fshort-enums -flto -D__HEAP_SIZE=0 -D__STACK_SIZE=8192 -I../../../config -I../../.. -I../../../include -I../../../include/boot_common -I../../../../../../../external/fprintf -I../../../../../../../components/libraries/experimental_section_vars -I../../../../../../../components/ant/ant_key_manager -I../../../../../../../components/libraries/atomic -I../../../../../../../components/libraries/delay -I../../../../../../../components/softdevice/common -I../config -I../../../../../../../components/libraries/balloc -I../../../../../../../components/libraries/log -I../../../../../../../components/libraries/memobj -I../../../../../../../components -I../../../../../../../modules/nrfx/mdk -I../../../../../../../components/libraries/scheduler -I../../../../../../../components/ant/ant_fs -I../../../../../../../integration/nrfx -I../../../../../../../modules/nrfx/drivers/include -I../../../../../../../components/softdevice/s212/headers/nrf52 -I../../../../../../../components/softdevice/s212/headers -I../../../../../../../components/libraries/ringbuf -I../../../../../../../modules/nrfx -I../../../../../../../components/libraries/log/src -I../../../../../../../components/libraries/strerror -I../../../../../../../external/segger_rtt -I../../../../../../../modules/nrfx/hal -I../../../../../../../components/ant/ant_key_manager/config -I../../../../../../../components/libraries/bsp -I../../../../../../../components/boards -I../../../../../../../components/libraries/timer -I../../../../../../../components/libraries/button -I../../../../../../../integration/nrfx/legacy -I../../../../../../../components/libraries/util -I../../../../../../../components/toolchain/cmsis/include
Compiling file: app_scheduler.c
'E:/SYSBUILD/systools/sysgcc/arm-eabi/bin/arm-eabi-gcc' -std=c99 -MP -MD -c -o _build/nrf52832_xxaa_s212/app_scheduler.c.o ../../../../../../../components/libraries/scheduler/app_scheduler.c -Os -g3 -DANT_STACK_SUPPORT_REQD -DBOARD_PCA10040 -DCONFIG_GPIO_AS_PINRESET -DFLOAT_ABI_HARD -DNRF52 -DNRF52832_XXAA -DNRF52_PAN_74 -DS212 -DSOFTDEVICE_PRESENT -DSWI_DISABLE0 -mcpu=cortex-m4 -mthumb -mabi=aapcs -Wall -Werror -mfloat-abi=hard -mfpu=fpv4-sp-d16 -ffunction-sections -fdata-sections -fno-strict-aliasing -fno-builtin -fshort-enums -flto -D__HEAP_SIZE=0 -D__STACK_SIZE=8192 -I../../../config -I../../.. -I../../../include -I../../../include/boot_common -I../../../../../../../external/fprintf -I../../../../../../../components/libraries/experimental_section_vars -I../../../../../../../components/ant/ant_key_manager -I../../../../../../../components/libraries/atomic -I../../../../../../../components/libraries/delay -I../../../../../../../components/softdevice/common -I../config -I../../../../../../../components/libraries/balloc -I../../../../../../../components/libraries/log -I../../../../../../../components/libraries/memobj -I../../../../../../../components -I../../../../../../../modules/nrfx/mdk -I../../../../../../../components/libraries/scheduler -I../../../../../../../components/ant/ant_fs -I../../../../../../../integration/nrfx -I../../../../../../../modules/nrfx/drivers/include -I../../../../../../../components/softdevice/s212/headers/nrf52 -I../../../../../../../components/softdevice/s212/headers -I../../../../../../../components/libraries/ringbuf -I../../../../../../../modules/nrfx -I../../../../../../../components/libraries/log/src -I../../../../../../../components/libraries/strerror -I../../../../../../../external/segger_rtt -I../../../../../../../modules/nrfx/hal -I../../../../../../../components/ant/ant_key_manager/config -I../../../../../../../components/libraries/bsp -I../../../../../../../components/boards -I../../../../../../../components/libraries/timer -I../../../../../../../components/libraries/button -I../../../../../../../integration/nrfx/legacy -I../../../../../../../components/libraries/util -I../../../../../../../components/toolchain/cmsis/include
Compiling file: app_timer.c
In file included from ../../../../../../../components/libraries/util/sdk_common.h:60:0,
                 from ../../../../../../../components/libraries/log/src/nrf_log_backend_rtt.c:40:
../../../../../../../components/libraries/util/sdk_errors.h:73:10: fatal error: nrf_error.h: No such file or directory
 #include "nrf_error.h"
          ^~~~~~~~~~~~~
compilation terminated.
make: *** [_build/nrf52832_xxaa_s212/nrf_log_backend_rtt.c.o] Error 1
make: *** Waiting for unfinished jobs....
In file included from ../../../../../../../components/libraries/util/sdk_common.h:60:0,
                 from ../../../../../../../components/libraries/log/src/nrf_log_backend_uart.c:40:
../../../../../../../components/libraries/util/sdk_errors.h:73:10: fatal error: nrf_error.h: No such file or directory
 #include "nrf_error.h"
          ^~~~~~~~~~~~~
compilation terminated.
In file included from ../../../../../../../components/libraries/util/sdk_common.h:60:0,
                 from ../../../../../../../components/libraries/log/src/nrf_log_backend_serial.c:40:
../../../../../../../components/libraries/util/sdk_errors.h:73:10: fatal error: nrf_error.h: No such file or directory
 #include "nrf_error.h"
          ^~~~~~~~~~~~~
compilation terminated.
make: *** [_build/nrf52832_xxaa_s212/nrf_log_backend_uart.c.o] Error 1
make: *** [_build/nrf52832_xxaa_s212/nrf_log_backend_serial.c.o] Error 1
In file included from ../../../../../../../components/libraries/util/sdk_common.h:60:0,
                 from ../../../../../../../components/libraries/log/src/nrf_log_frontend.c:40:
../../../../../../../components/libraries/util/sdk_errors.h:73:10: fatal error: nrf_error.h: No such file or directory
 #include "nrf_error.h"
          ^~~~~~~~~~~~~
compilation terminated.
In file included from ../../../../../../../components/libraries/util/sdk_common.h:60:0,
                 from ../../../../../../../components/libraries/log/src/nrf_log_default_backends.c:41:
../../../../../../../components/libraries/util/sdk_errors.h:73:10: fatal error: nrf_error.h: No such file or directory
 #include "nrf_error.h"
          ^~~~~~~~~~~~~
compilation terminated.
In file included from ../../../../../../../components/libraries/util/sdk_common.h:60:0,
                 from ../../../../../../../components/libraries/log/src/nrf_log_str_formatter.c:40:
../../../../../../../components/libraries/util/sdk_errors.h:73:10: fatal error: nrf_error.h: No such file or directory
 #include "nrf_error.h"
          ^~~~~~~~~~~~~
compilation terminated.
make: *** [_build/nrf52832_xxaa_s212/nrf_log_frontend.c.o] Error 1
make: *** [_build/nrf52832_xxaa_s212/nrf_log_default_backends.c.o] Error 1
make: *** [_build/nrf52832_xxaa_s212/nrf_log_str_formatter.c.o] Error 1
In file included from ../../../../../../../components/libraries/util/sdk_common.h:60:0,
                 from ../../../../../../../components/libraries/util/app_error_handler_gcc.c:40:
../../../../../../../components/libraries/util/sdk_errors.h:73:10: fatal error: nrf_error.h: No such file or directory
 #include "nrf_error.h"
          ^~~~~~~~~~~~~
In file included from ../../../../../../../components/libraries/util/sdk_common.h:60:0,
                 from ../../../../../../../components/libraries/button/app_button.c:40:
../../../../../../../components/libraries/util/sdk_errors.h:73:10: fatal error: nrf_error.h: No such file or directory
 #include "nrf_error.h"
          ^~~~~~~~~~~~~
compilation terminated.
compilation terminated.
make: *** [_build/nrf52832_xxaa_s212/app_button.c.o] Error 1
make: *** [_build/nrf52832_xxaa_s212/app_error_handler_gcc.c.o] Error 1
In file included from ../../../../../../../components/libraries/util/sdk_common.h:60:0,
                 from ../../../../../../../components/libraries/scheduler/app_scheduler.c:40:
../../../../../../../components/libraries/util/sdk_errors.h:73:10: fatal error: nrf_error.h: No such file or directory
 #include "nrf_error.h"
          ^~~~~~~~~~~~~
compilation terminated.
make: *** [_build/nrf52832_xxaa_s212/app_scheduler.c.o] Error 1
In file included from ../../../../../../../integration/nrfx/nrfx_glue.h:183:0,
                 from ../../../../../../../modules/nrfx/nrfx.h:46,
                 from ../../../../../../../modules/nrfx/hal/nrf_gpio.h:44,
                 from ../../../../../../../components/boards/boards.h:43,
                 from ../../../../../../../components/boards/boards.c:40:
../../../../../../../components/libraries/util/app_util_platform.h:56:10: fatal error: nrf_soc.h: No such file or directory
 #include "nrf_soc.h"
          ^~~~~~~~~~~
compilation terminated.
make: *** [_build/nrf52832_xxaa_s212/boards.c.o] Error 1
In file included from ../../../../../../../components/libraries/util/app_error.h:57:0,
                 from ../../../../../../../components/libraries/util/app_error.c:51:
../../../../../../../components/libraries/util/sdk_errors.h:73:10: fatal error: nrf_error.h: No such file or directory
 #include "nrf_error.h"
          ^~~~~~~~~~~~~
compilation terminated.
In file included from ../../../../../../../components/libraries/util/app_error.h:57:0,
                 from ../../../../../../../components/libraries/util/app_error_weak.c:40:
../../../../../../../components/libraries/util/sdk_errors.h:73:10: fatal error: nrf_error.h: No such file or directory
 #include "nrf_error.h"
          ^~~~~~~~~~~~~
compilation terminated.
make: *** [_build/nrf52832_xxaa_s212/app_error.c.o] Error 1
make: *** [_build/nrf52832_xxaa_s212/app_error_weak.c.o] Error 1
